# ros-travis-integration

./: .gitignore  .travis.yml  LICENSE  README.md  dependencies.rosinstall  index.html  params.json
basic_ros_pkg/: CMakeLists.txt  package.xml
basic_ros_pkg/msg/: StringIntTuple.msg
basic_ros_pkg/src/: talker.cpp
ros_pkg_with_dependencies/: CMakeLists.txt  package.xml
ros_pkg_with_dependencies/src/: audio_user.cpp
ros_pkg_with_tests/: CMakeLists.txt  package.xml
ros_pkg_with_tests/scripts/: double.py
ros_pkg_with_tests/scripts/test/: test_double.py
ros_pkg_with_tests/src/: square.cpp  square.h
ros_pkg_with_tests/src/test/: test_square.cpp
