<?xml version="1.0"?>
<package>
  <name>ros_pkg_with_dependencies</name>
  <version>0.0.0</version>
  <description>A test ros package with dependencies.</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="felix.duvallet@epfl.ch">Felix Duvallet</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>audio_common_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>pocketsphinx</build_depend>
  <run_depend>audio_common_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
