<?xml version="1.0"?>
<package>
  <name>ros_pkg_with_tests</name>
  <version>0.0.0</version>
  <description>The ros_pkg_with_tests package</description>

  <maintainer email="felix.duvallet@epfl.ch">Felix Duvallet</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rostest</build_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
